--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -14,6 +14,7 @@ spec:
   params:
     - name: repo-url
     - name: branch
+    - name: build-image
       default: main
   tasks:
     - name: init
@@ -61,7 +62,7 @@ spec:
         value: "-v --with-spec --spec-color"
       runAfter:
         - clone
-    - name: build-image
+    - name: build
       workspaces:
         - name: source
           workspace: pipeline-workspace
