--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -1,12 +1,6 @@
-#
-# This pipeline needs the following tasks from Tekton Hub
-#   - git-clone
-#   - flake8
-#
----
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
-metadata:  
+metadata:
   name: cd-pipeline
 spec:
   workspaces:
@@ -20,21 +14,20 @@ spec:
     - name: init
       workspaces:
         - name: source
-          workspace: pipeline-workspace          
+          workspace: pipeline-workspace
       taskRef:
         name: cleanup
-
     - name: clone
       workspaces:
         - name: output
-          workspace: pipeline-workspace          
+          workspace: pipeline-workspace
       taskRef:
         name: git-clone
       params:
-      - name: url
-        value: $(params.repo-url)
-      - name: revision
-        value: $(params.branch)
+        - name: url
+          value: $(params.repo-url)
+        - name: revision
+          value: $(params.branch)
       runAfter:
         - name: lint
           workspaces:
@@ -43,10 +36,14 @@ spec:
           taskRef:
             name: flake8
           params:
-          - name: image
-            value: "python:3.9-slim"
-          - name: args
-            value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
+            - name: image
+              value: 'python:3.9-slim'
+            - name: args
+              value:
+                - '--count'
+                - '--max-complexity=10'
+                - '--max-line-length=127'
+                - '--statistics'
           runAfter:
             - clone
     - name: tests
@@ -56,10 +53,10 @@ spec:
       taskRef:
         name: nose
       params:
-      - name: database_uri
-        value: "sqlite:///test.db"
-      - name: args
-        value: "-v --with-spec --spec-color"
+        - name: database_uri
+          value: 'sqlite:///test.db'
+        - name: args
+          value: '-v --with-spec --spec-color'
       runAfter:
         - clone
     - name: build
@@ -70,8 +67,8 @@ spec:
         name: buildah
         kind: ClusterTask
       params:
-      - name: IMAGE
-        value: "$(params.build-image)"
+        - name: IMAGE
+          value: $(params.build-image)
       runAfter:
         - tests
         - lint
@@ -83,13 +80,19 @@ spec:
         name: openshift-client
         kind: ClusterTask
       params:
-      - name: SCRIPT
-        value: |
-          echo "Updating manifest..."
-          sed -i "s|IMAGE_NAME_HERE|$(params.build-image)|g" deploy/deployment.yaml
-          cat deploy/deployment.yaml
-          echo "Deploying to OpenShift..."
-          oc apply -f deploy/
-          oc get pods -l app=accounts
+        - name: SCRIPT
+          value: >
+            echo "Updating manifest..."
+
+            sed -i "s|IMAGE_NAME_HERE|$(params.build-image)|g"
+            deploy/deployment.yaml
+
+            cat deploy/deployment.yaml
+
+            echo "Deploying to OpenShift..."
+
+            oc apply -f deploy/
+
+            oc get pods -l app=accounts
       runAfter:
         - build
